# source files
set(COIN_COLLISION_FILES
	SbTri3f.cpp
	SoIntersectionDetectionAction.cpp
)

# build library
if(COIN_BUILD_SINGLE_LIB)
	foreach(SRCFILE ${COIN_COLLISION_FILES})
		set(COIN_SOURCE ${COIN_SOURCE} collision/${SRCFILE} CACHE INTERNAL "COIN_SOURCE")
	endforeach(SRCFILE)
else()
	add_library(collision OBJECT ${COIN_COLLISION_FILES})
endif()

# define documentation
foreach(SRCFILE ${COIN_COLLISION_FILES})
	set(COIN_DOCUMENTATION_FILES ${COIN_DOCUMENTATION_FILES} ${CMAKE_SOURCE_DIR}/src/collision/${SRCFILE} CACHE INTERNAL "COIN_DOCUMENTATION_FILES")
endforeach(SRCFILE)
set(COIN_DOCUMENTATION_FILES
	${COIN_DOCUMENTATION_FILES}
	${CMAKE_SOURCE_DIR}/src/collision/SbTri3f.h
	CACHE INTERNAL "COIN_DOCUMENTATION_FILES"
)
