## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

if HACKING_COMPACT_BUILD
ALLSOURCES = all.cpp
else
ALLSOURCES = \
	SoDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoDetail.h \
	$(top_srcdir)/include/Inventor/details/SoSubDetail.h \
	$(top_srcdir)/include/Inventor/details/SoDetails.h \
	SoConeDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoConeDetail.h \
	SoCubeDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoCubeDetail.h \
	SoCylinderDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoCylinderDetail.h \
	SoFaceDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoFaceDetail.h \
	SoLineDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoLineDetail.h \
	SoNodeKitDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoNodeKitDetail.h \
	SoPointDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoPointDetail.h \
	SoTextDetail.cpp \
	$(top_srcdir)/include/Inventor/details/SoTextDetail.h
endif

ALLINSTHEADERS = \
	$(top_srcdir)/include/Inventor/details/SoSubDetail.h \
	$(top_srcdir)/include/Inventor/details/SoDetail.h \
	$(top_srcdir)/include/Inventor/details/SoDetails.h \
	$(top_srcdir)/include/Inventor/details/SoConeDetail.h \
	$(top_srcdir)/include/Inventor/details/SoCubeDetail.h \
	$(top_srcdir)/include/Inventor/details/SoCylinderDetail.h \
	$(top_srcdir)/include/Inventor/details/SoFaceDetail.h \
	$(top_srcdir)/include/Inventor/details/SoLineDetail.h \
	$(top_srcdir)/include/Inventor/details/SoNodeKitDetail.h \
	$(top_srcdir)/include/Inventor/details/SoPointDetail.h \
	$(top_srcdir)/include/Inventor/details/SoTextDetail.h

##$ BEGIN TEMPLATE Make-Common(details)

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libdetails@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libdetails.la
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_builddir)/include

libdetails_la_SOURCES = $(ALLSOURCES)
libdetails@SUFFIX@LINKHACK_la_SOURCES = $(ALLSOURCES)

libdetailsincdir = $(includedir)/Inventor/details
libdetailsinc_HEADERS = $(ALLINSTHEADERS)

##$ END TEMPLATE Make-Common
