## Process this file with automake to generate Makefile.in.
## 19990904 mortene.

RegularSources = \
	SoDetail.cpp \
	SoConeDetail.cpp \
	SoCubeDetail.cpp \
	SoCylinderDetail.cpp \
	SoFaceDetail.cpp \
	SoLineDetail.cpp \
	SoNodeKitDetail.cpp \
	SoPointDetail.cpp \
	SoTextDetail.cpp
LinkHackSources = \
	all.cpp
PublicHeaders = \
	../../include/Inventor/details/SoSubDetail.h \
	../../include/Inventor/details/SoDetail.h \
	../../include/Inventor/details/SoDetails.h \
	../../include/Inventor/details/SoConeDetail.h \
	../../include/Inventor/details/SoCubeDetail.h \
	../../include/Inventor/details/SoCylinderDetail.h \
	../../include/Inventor/details/SoFaceDetail.h \
	../../include/Inventor/details/SoLineDetail.h \
	../../include/Inventor/details/SoNodeKitDetail.h \
	../../include/Inventor/details/SoPointDetail.h \
	../../include/Inventor/details/SoTextDetail.h
PrivateHeaders =

##$ BEGIN TEMPLATE Make-Common(details)
# **************************************************************************
# This template depends on the following variables having been set up before
# its invokation.
#
# PublicHeaders    - header files that should be installed
# PrivateHeaders   - source files that should be distributed, but not
#                    installed - including source-included source files.
# RegularSources   - source files compiled in this directory
# LinkHackSources  - alternative source files used on -enable-compact compilation
# ObsoletedHeaders - header files that should be removed upon installation

# Everything below is autogenerated from a macro, so don't modify
# within the Makefile.am itself. 19991201 mortene.

if HACKING_COMPACT_BUILD
BuildSources = $(LinkHackSources)
else
BuildSources = $(RegularSources)
endif

if BUILD_WITH_MSVC
noinst_LIBRARIES = details.lst
else
if HACKING_DYNAMIC_MODULES
lib_LTLIBRARIES = libdetails@SUFFIX@LINKHACK.la
else
noinst_LTLIBRARIES = libdetails.la
endif
endif

# Remove any linklibraries detected by configure, as they are not
# needed in the submodules -- only in the toplevel libCoin build.
LIBS = 

INCLUDES = -I$(top_srcdir)/include -I$(top_builddir)/src/extensions

libdetails_la_SOURCES = $(BuildSources)
EXTRA_libdetails_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libdetails@SUFFIX@LINKHACK_la_SOURCES = $(BuildSources)
EXTRA_libdetails@SUFFIX@LINKHACK_la_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

libdetailsincdir = $(includedir)/Inventor/details
libdetailsinc_HEADERS = $(PublicHeaders)

details_lst_SOURCES = $(BuildSources)
EXTRA_details_lst_SOURCES = \
	$(PublicHeaders) $(PrivateHeaders) $(RegularSources) $(LinkHackSources)

# this rule causes a make warning, so we remove it when it is not in use
details.lst: Makefile $(details_lst_OBJECTS)
	@echo "Linking details.lst..."; \
	rm -f $@; touch $@; \
	for i in $(details_lst_OBJECTS); do echo $$i >>$@; done

install-libdetailsincHEADERS: $(libdetailsinc_HEADERS)
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(DESTDIR)$(libdetailsincdir)
	@list='$(libdetailsinc_HEADERS)'; for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  f="`echo $$p | sed -e 's|^.*/||'`"; \
	  src="$$d$$p"; dst="$(DESTDIR)$(libdetailsincdir)/$$f"; \
	  if cmp -s "$$src" "$$dst"; then :; else \
	    echo " $(INSTALL_HEADER) $$src $$dst"; \
	    $(INSTALL_HEADER) "$$src" "$$dst"; \
	  fi \
	done
	@list='$(ObsoletedHeaders)'; for f in $$list; do \
	  file="$(DESTDIR)$(libdetailsincdir)/$$f"; \
	  if test -x "$$file"; then \
	    echo " rm -f $$file"; \
	    rm -f "$$file"; \
	  fi \
	done

##$ END TEMPLATE Make-Common
